--- a/index.html
+++ b/index.html
@@ -6,23 +6,23 @@
 -->
 <html>
 	<head>
-		<title>Directive by HTML5 UP</title>
+		<title>Lumos Integration LLC</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
 	</head>
 	<body class="is-preload">
 
-		<!-- Header -->
+		<!-- header -->
 			<div id="header">
 				<span class="logo icon fa-paper-plane"></span>
-				<h1>Hi. This is Directive.</h1>
-				<p>A responsive HTML5 + CSS3 site template designed by <a href="http://html5up.net">HTML5 UP</a>
+				<h1>Lumos Itegration LLC</h1>
+				<p>a responsive html5 + css3 site template designed by <a href="http://html5up.net">html5 up</a>
 				<br />
-				and released for free under the <a href="http://html5up.net/license">Creative Commons license</a>.</p>
+				and released for free under the <a href="http://html5up.net/license">creative commons license</a>.</p>
 			</div>
 
-		<!-- Main -->
+		<!-- main -->
 			<div id="main">
 
 				<header class="major container medium">
