moved hosting to DO

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 			<div id="header">
 				<span class="logo icon fa-paper-plane"></span>
 				<h1>Lumos Itegration LLC</h1>
-				<p>a responsive html5 + css3 site template designed by <a href="http://html5up.net">html5 up</a>
+				<p>IT Experts with a passion for creating Smart Homes <a href="http://html5up.net">html5 up</a>
 				<br />
 				and released for free under the <a href="http://html5up.net/license">creative commons license</a>.</p>
 			</div>
