Changed header image and added AV

--- a/index.html
+++ b/index.html
@@ -16,53 +16,58 @@
 		<!-- header -->
 			<div id="header">
 				<span class="logo icon fa-paper-plane"></span>
-				<h1>Lumos Itegration LLC</h1>
-				<p>IT Experts with a passion for creating Smart Homes <a href="http://html5up.net">html5 up</a>
+				<h1>Lumos Integration : Aspen</h1>
+				<p>AV and IT Experts with a passion for creating your <a href="http://html5up.net">Smart Home</a>
 				<br />
-				and released for free under the <a href="http://html5up.net/license">creative commons license</a>.</p>
+				Certified <a href="http://lutron.com">Lutron</a>, <a href="http://lutron.com">Crestron</a>, and <a href="http://lutron.com">Control4</a> dealer.</p>
 			</div>
 
 		<!-- main -->
 			<div id="main">
 
 				<header class="major container medium">
-					<h2>We conduct experiments that
+					<h2>
+					What can we do for you?
 					<br />
-					may or may not seriously
-					<br />
-					break the universe</h2>
-					<!--
+					</h2>
+					<!-- 
 					<p>Tellus erat mauris ipsum fermentum<br />
 					etiam vivamus nunc nibh morbi.</p>
-					-->
+					 -->
 				</header>
 
 				<div class="box alt container">
 					<section class="feature left">
-						<a href="#" class="image icon solid fa-signal"><img src="images/pic01.jpg" alt="" /></a>
+						<a href="#" class="image icon solid fa-lightbulb"><img src="images/lighting.jpg" alt="" /></a>
 						<div class="content">
-							<h3>The First Thing</h3>
-							<p>Vitae natoque dictum etiam semper magnis enim feugiat amet curabitur tempor orci penatibus. Tellus erat mauris ipsum fermentum etiam vivamus eget. Nunc nibh morbi quis fusce lacus.</p>
+							<h3>Lighting Solutions:</h3>
+							<p>Illuminate your home with precision and style. Our advanced lighting systems offer customizable settings to match your mood, enhance security, and conserve energy.</p>
+						</div>
+					</section>
+					<section class="feature right">
+						<a href="#" class="image icon solid fa-wifi"><img src="images/pic02.jpg" alt="" /></a>
+						<div class="content">
+							<h3>Networking Expertise:</h3>
+							<p>Stay connected effortlessly. From seamless Wi-Fi coverage to robust networking solutions, we ensure that every corner of your home is equipped for smooth connectivity and high-speed internet access.</p>
+						</div>
+					</section>
+					<section class="feature left">
+						<a href="#" class="image icon solid fa-sun"><img src="images/pic03.jpg" alt="" /></a>
+						<div class="content">
+							<h3>Shading Solutions:</h3>
+							<p>Control light and privacy at the touch of a button. Our automated shading solutions offer convenience, elegance, and energy efficiency, enhancing both the aesthetic and functionality of your space.</p>
 						</div>
 					</section>
 					<section class="feature right">
 						<a href="#" class="image icon solid fa-code"><img src="images/pic02.jpg" alt="" /></a>
 						<div class="content">
-							<h3>The Second Thing</h3>
-							<p>Vitae natoque dictum etiam semper magnis enim feugiat amet curabitur tempor orci penatibus. Tellus erat mauris ipsum fermentum etiam vivamus eget. Nunc nibh morbi quis fusce lacus.</p>
-						</div>
-					</section>
-					<section class="feature left">
-						<a href="#" class="image icon solid fa-mobile-alt"><img src="images/pic03.jpg" alt="" /></a>
-						<div class="content">
-							<h3>The Third Thing</h3>
-							<p>Vitae natoque dictum etiam semper magnis enim feugiat amet curabitur tempor orci penatibus. Tellus erat mauris ipsum fermentum etiam vivamus eget. Nunc nibh morbi quis fusce lacus.</p>
+							<h3>Smart Home Integrations:</h3>
+							<p>Elevate your living experience with comprehensive smart home integrations. From voice-controlled assistants to smart thermostats and security systems, we bring together cutting-edge technologies to create a home that works smarter for you.</p>
 						</div>
 					</section>
 				</div>
 
-				<!--
-				<div class="box container">
+				<!-- <div class="box container">
 					<header>
 						<h2>A lot of generic stuff</h2>
 					</header>
@@ -71,7 +76,7 @@
 							<h3>Paragraph</h3>
 							<p>This is the subtitle for this particular heading</p>
 						</header>
-						<p>Phasellus nisl nisl, varius id <sup>porttitor sed pellentesque</sup> ac orci. Pellentesque
+						<p>Bla bla bla <sup>porttitor sed pellentesque</sup> ac orci. Pellentesque
 						habitant <strong>strong</strong> tristique <b>bold</b> et netus <i>italic</i> malesuada <em>emphasized</em> ac turpis egestas. Morbi
 						leo suscipit ut. Praesent <sub>id turpis vitae</sub> turpis pretium ultricies. Vestibulum sit
 						amet risus elit.</p>
@@ -202,11 +207,11 @@
 						</form>
 					</section>
 				</div>
-				-->
+				 -->
 
 				<footer class="major container medium">
-					<h3>Get shady with science</h3>
-					<p>Vitae natoque dictum etiam semper magnis enim feugiat amet curabitur tempor orci penatibus. Tellus erat mauris ipsum fermentum etiam vivamus.</p>
+					<h3>We're hiring</h3>
+					<p>If you live in Aspen and want to join our team please get in touch.</p>
 					<ul class="actions special">
 						<li><a href="#" class="button">Join our crew</a></li>
 					</ul>
@@ -219,11 +224,10 @@
 				<div class="container medium">
 
 					<header class="major last">
-						<h2>Questions or comments?</h2>
+						<h2>Ready to experience the convenience and luxury of a truly smart home?</h2>
 					</header>
 
-					<p>Vitae natoque dictum etiam semper magnis enim feugiat amet curabitur tempor
-					orci penatibus. Tellus erat mauris ipsum fermentum etiam vivamus.</p>
+					<p>Contact us today to schedule a consultation and discover how we can transform your house into the home of your dreams.</p>
 
 					<form method="post" action="#">
 						<div class="row">
