--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 					</section>
 				</div>
 
-				<!-- <div class="box container">
+				<div class="box container">
 					<header>
 						<h2>A lot of generic stuff</h2>
 					</header>
@@ -207,7 +207,7 @@
 						</form>
 					</section>
 				</div>
-				 -->
+				
 
 				<footer class="major container medium">
 					<h3>We're hiring</h3>
