changes from scot

--- a/index.html
+++ b/index.html
@@ -16,18 +16,19 @@
 		<!-- header -->
 			<div id="header">
 				<span class="logo icon fa-paper-plane"></span>
-				<h1>Lumos Integration : Aspen</h1>
-				<p>AV and IT Experts with a passion for creating your <a href="http://html5up.net">Smart Home</a>
+				<h1>Lumos Integration</h1>
+				<p>Transform your Aspen home or business with smart technology. Discover seamless integration and personalized control</p>
+				<!-- <p>AV and IT Experts with a passion for creating your <a href="http://html5up.net">Smart Home</a>
 				<br />
 				Certified <a href="http://lutron.com">Lutron</a>, <a href="http://lutron.com">Crestron</a>, and <a href="http://lutron.com">Control4</a> dealer.</p>
-			</div>
+ -->			</div>
 
 		<!-- main -->
 			<div id="main">
 
 				<header class="major container medium">
 					<h2>
-					What can we do for you?
+					Home solutions so seamless they feel like magic!
 					<br />
 					</h2>
 					<!-- 
@@ -40,15 +41,29 @@
 					<section class="feature left">
 						<a href="#" class="image icon solid fa-lightbulb"><img src="images/lighting.jpg" alt="" /></a>
 						<div class="content">
-							<h3>Lighting Solutions:</h3>
-							<p>Illuminate your home with precision and style. Our advanced lighting systems offer customizable settings to match your mood, enhance security, and conserve energy.</p>
+							<h3>Window Coverings & Lighting System Programming</h3>
+							<p>Tailor your ambiance with advanced control over lighting and shades, enhancing comfort and energy efficiency. Find the perfect blend of style, privacy, and functionality with our custom shades and window coverings</p>
 						</div>
 					</section>
 					<section class="feature right">
 						<a href="#" class="image icon solid fa-wifi"><img src="images/pic02.jpg" alt="" /></a>
 						<div class="content">
-							<h3>Networking Expertise:</h3>
-							<p>Stay connected effortlessly. From seamless Wi-Fi coverage to robust networking solutions, we ensure that every corner of your home is equipped for smooth connectivity and high-speed internet access.</p>
+							<h3>Home Automation</h3>
+							<p>Simplify your life with integrated home automation solutions, controlling your home environment effortlessly.</p>
+						</div>
+					</section>
+					<section class="feature left">
+						<a href="#" class="image icon solid fa-sun"><img src="images/pic03.jpg" alt="" /></a>
+						<div class="content">
+							<h3>Shading Solutions:</h3>
+							<p>Control light and privacy at the touch of a button. Our automated shading solutions offer convenience, elegance, and energy efficiency, enhancing both the aesthetic and functionality of your space.</p>
+						</div>
+					</section>
+					<section class="feature right">
+						<a href="#" class="image icon solid fa-code"><img src="images/pic02.jpg" alt="" /></a>
+						<div class="content">
+							<h3>Smart Home Integrations:</h3>
+							<p>Elevate your living experience with comprehensive smart home integrations. From voice-controlled assistants to smart thermostats and security systems, we bring together cutting-edge technologies to create a home that works smarter for you.</p>
 						</div>
 					</section>
 					<section class="feature left">
