--- a/index.html
+++ b/index.html
@@ -41,43 +41,50 @@
 					<section class="feature left">
 						<a href="#" class="image icon solid fa-lightbulb"><img src="images/lighting.jpg" alt="" /></a>
 						<div class="content">
-							<h3>Window Coverings & Lighting System Programming</h3>
-							<p>Tailor your ambiance with advanced control over lighting and shades, enhancing comfort and energy efficiency. Find the perfect blend of style, privacy, and functionality with our custom shades and window coverings</p>
+							<h3>Lighting Systems/h3>
+							<p>Find the perfect blend of style, privacy, and functionality with our custom lighting shades and window coverings.</p>
 						</div>
 					</section>
 					<section class="feature right">
 						<a href="#" class="image icon solid fa-wifi"><img src="images/pic02.jpg" alt="" /></a>
 						<div class="content">
+							<h3>Window Coverings</h3>
+							<p>Tailor your ambiance with advanced control over lighting and shades, enhancing comfort and energy efficiency.</p>
+						</div>
+					</section>
+					<section class="feature left">
+						<a href="#" class="image icon solid fa-sun"><img src="images/pic03.jpg" alt="" /></a>
+						<div class="content">
 							<h3>Home Automation</h3>
 							<p>Simplify your life with integrated home automation solutions, controlling your home environment effortlessly.</p>
 						</div>
 					</section>
-					<section class="feature left">
-						<a href="#" class="image icon solid fa-sun"><img src="images/pic03.jpg" alt="" /></a>
-						<div class="content">
-							<h3>Shading Solutions:</h3>
-							<p>Control light and privacy at the touch of a button. Our automated shading solutions offer convenience, elegance, and energy efficiency, enhancing both the aesthetic and functionality of your space.</p>
-						</div>
-					</section>
 					<section class="feature right">
 						<a href="#" class="image icon solid fa-code"><img src="images/pic02.jpg" alt="" /></a>
 						<div class="content">
-							<h3>Smart Home Integrations:</h3>
-							<p>Elevate your living experience with comprehensive smart home integrations. From voice-controlled assistants to smart thermostats and security systems, we bring together cutting-edge technologies to create a home that works smarter for you.</p>
+							<h3>Mobile and PC Support</h3>
+							<p>Keep your devices connected and optimized, ensuring seamless integration with your smart home systems.</p>
 						</div>
 					</section>
 					<section class="feature left">
 						<a href="#" class="image icon solid fa-sun"><img src="images/pic03.jpg" alt="" /></a>
 						<div class="content">
-							<h3>Shading Solutions:</h3>
-							<p>Control light and privacy at the touch of a button. Our automated shading solutions offer convenience, elegance, and energy efficiency, enhancing both the aesthetic and functionality of your space.</p>
+							<h3>Voice & Access Control</h3>
+							<p>Embrace the convenience of voice control and enhance your security with sophisticated voice and access control solutions for peace of mind.</p>
 						</div>
 					</section>
 					<section class="feature right">
 						<a href="#" class="image icon solid fa-code"><img src="images/pic02.jpg" alt="" /></a>
 						<div class="content">
-							<h3>Smart Home Integrations:</h3>
-							<p>Elevate your living experience with comprehensive smart home integrations. From voice-controlled assistants to smart thermostats and security systems, we bring together cutting-edge technologies to create a home that works smarter for you.</p>
+							<h3>Entertainment Systems</h3>
+							<p>Discover the ultimate entertainment experience with customized audio and visual solutions.</p>
+						</div>
+					</section>
+					<section class="feature left">
+						<a href="#" class="image icon solid fa-sun"><img src="images/pic03.jpg" alt="" /></a>
+						<div class="content">
+							<h3>Custom Studio Design and Installation</h3>
+							<p>Streaming, photography and music production studio installation in the comfort of your home.</p>
 						</div>
 					</section>
 				</div>
