--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 					<section class="feature left">
 						<a href="#" class="image icon solid fa-lightbulb"><img src="images/lighting.jpg" alt="" /></a>
 						<div class="content">
-							<h3>Lighting Systems/h3>
+							<h3>Lighting Systems</h3>
 							<p>Find the perfect blend of style, privacy, and functionality with our custom lighting shades and window coverings.</p>
 						</div>
 					</section>
