--- a/index.html
+++ b/index.html
@@ -112,21 +112,36 @@
 					</section>
 					<section>
 						<header>
-							<h3>Divider</h3>
+							<h3>Who We Serve</h3>
 						</header>
-						<p>Donec consectetur vestibulum dolor et pulvinar. Etiam vel felis enim, at viverra
-						ligula. Ut porttitor sagittis lorem, quis eleifend nisi ornare vel. Praesent nec orci
-						facilisis leo magna. Cras sit amet urna eros, id egestas urna. Quisque aliquam
-						tempus euismod. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices
-						posuere cubilia.</p>
+						<p>We are Aspen locals dedicated to serving the Aspen area with pride and precision.
+							Lumos Integration offers simple solutions for those looking to navigate the complexities of modern technology.</p>
+							<br />
+						<p>Technology often complicates rather than simplifying our lives.  Lumos Integration stands out by making sophistication simple. Our processes are designed to be fast and efficient, minimizing disruption. We strive to make every interaction with technology as straightforward and enjoyable as possible, allowing you to focus on what truly matters.</p>
 						<hr />
-						<p>Donec consectetur vestibulum dolor et pulvinar. Etiam vel felis enim, at viverra
-						ligula. Ut porttitor sagittis lorem, quis eleifend nisi ornare vel. Praesent nec orci
-						facilisis leo magna. Cras sit amet urna eros, id egestas urna. Quisque aliquam
-						tempus euismod. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices
-						posuere cubilia.</p>
+						<header>
+							<h3>About Us</h3>
+						</header>
+						<p>At Lumos Integration, we're more than just a service provider; we're your local partner in Aspen, committed to delivering service-oriented, flexible, and reliable solutions. Our approach is customized and personalized, ensuring that every solution we provide is tailored to meet your specific needs. We pride ourselves on being fast, efficient, and capable of making complex systems simple and intuitive for our clients.</p>
+						<br />
+						<p>Lumos Integration is defined by a commitment to service, flexibility, and a deeply rooted connection to Aspen.</p>
+
+						<hr />
+						<h3>Discover the Lumos Difference</h3>
+						<ul class="default">
+							<li>Service-Oriented and Flexible</li>
+							<li>Customized and Personalized Solutions</li>
+							<li>Reliable and Local</li>
+							<li>Fast and Simple</li>
+							<li>Aspen Locals Serving Aspen Locals</li>	
+						</ul>
+						<h3>Contact Us</h3>
+						<p>Text us at : XXX-XXX-XXXX</p>
+						<p>Call: XXX-XXX-XXXX</p>
+						<p>Email: contact@LumosIntegration.com</p>
+
 					</section>
-					<section>
+					<!-- <section>
 						<header>
 							<h3>Unordered List</h3>
 						</header>
@@ -227,7 +242,7 @@
 								</div>
 							</div>
 						</form>
-					</section>
+					</section> -->
 				</div>
 				
 
