removed image logo and replaced with text logo

--- a/index.html
+++ b/index.html
@@ -12,14 +12,14 @@
 		<link rel="stylesheet" href="assets/css/main.css" />
 	</head>
 	<body class="is-preload">
-				<br />
-				<h1>Lumos Integration | 970-235-1476</h1>
+				<h1 class="banner">Lumos Integration | 970-235-1476</h1>
 	
 		
 		<!-- header -->
 			<div id="header">
-				<img class="logo" src="images/logo.png" alt="Lumos Integration LLC" />
-				<!-- <h1>Lumos Integration</h1> -->
+				<!-- <span class="logo icon fa-paper-plane"></span> -->
+				<h1>Lumos</h1>
+				<span class="integration">Integration</span>
 				<p>Transform your Aspen home or business with smart technology.
 				<br />Discover seamless integration and personalized control.</p>
 				<a href="https://docs.google.com/forms/d/e/1FAIpQLSdkIINLSUBeYl8ISe35IaxnYtK_J7OlsmPvQmLJ0bQC7AmqyQ/viewform?usp=sf_link" class="button">Contact Us</a>
